Fixing grid alignment

--- a/css/hashers.css
+++ b/css/hashers.css
@@ -32,6 +32,7 @@
 .symbols {
 	background-color: white;
     color: black;
+    height: 200px;
     padding-top: 5px;
     padding-bottom: 15px;
     margin-top: -10px;
